# rag-medical-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: application.py
app/components/: data_loader.py  embeddings.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
app/config/: config.py
app/templates/: index.html
