[project]
name = "rag-medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "huggingface-hub>=1.15.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
]
